@@ -17,11 +17,11 @@
  */
 package org.apache.beam.sdk.extensions.sql.impl.interpreter.operator;
 
-import com.google.common.collect.ImmutableMap;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.util.ArrayList;
 import java.util.List;
+import org.apache.beam.sdk.extensions.sql.impl.interpreter.BeamSqlExpressionEnvironment;
 import org.apache.beam.sdk.transforms.windowing.BoundedWindow;
 import org.apache.beam.sdk.values.Row;
 import org.apache.calcite.sql.type.SqlTypeName;
@@ -54,14 +54,14 @@ public class BeamSqlUdfExpression extends BeamSqlExpression {
 
   @Override
   public BeamSqlPrimitive evaluate(
-      Row inputRow, BoundedWindow window, ImmutableMap<Integer, Object> correlateEnv) {
+      Row inputRow, BoundedWindow window, BeamSqlExpressionEnvironment env) {
     if (method == null) {
       reConstructMethod();
     }
     try {
       List<Object> paras = new ArrayList<>();
       for (BeamSqlExpression e : getOperands()) {
-        paras.add(e.evaluate(inputRow, window, correlateEnv).getValue());
+        paras.add(e.evaluate(inputRow, window, env).getValue());
       }
 
       return BeamSqlPrimitive.of(
@@ -80,7 +80,7 @@ public class BeamSqlUdfExpression extends BeamSqlExpression {
       }
       method = Class.forName(className).getMethod(methodName, paraClass.toArray(new Class<?>[] {}));
       if (!Modifier.isStatic(method.getModifiers())) {
-        udfIns = Class.forName(className).newInstance();
+        udfIns = Class.forName(className).getDeclaredConstructor().newInstance();
       }
     } catch (Exception e) {
       throw new RuntimeException(e);
